[tool.poetry]
name = "ergo-celery"
version = "0.1.0"
description = "Celery integration to pick up tasks using Ergo protocol"
authors = ["Shivansh Saini <shivanshs9@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
celery = {extras = ["sqs"], version = "^5.1.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
